Fixed validators