@@ -3,6 +3,7 @@ package com.example.flashcards.validation;
 import com.example.flashcards.dto.flashcard.LanguageDto;
 import com.example.flashcards.exception.InvalidArgumentException;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 import org.springframework.validation.FieldError;
 
@@ -12,8 +13,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import static java.util.Objects.nonNull;
 
 @Component
 @RequiredArgsConstructor
@@ -32,7 +31,6 @@ public class LanguageValidator {
     }
 
     private List<FieldError> getFieldErrors(final LanguageDto languageDto, final boolean isEdit) {
-
         if (isEdit) {
             return Optional.ofNullable(languageDto).map(lang -> Stream.of(checkName(lang.getName()))
                     .filter(Objects::nonNull).collect(Collectors.toList())).orElse(Collections.emptyList());
@@ -44,7 +42,7 @@ public class LanguageValidator {
     }
 
     private FieldError checkName(final String name) {
-        if (nonNull(name) && (name.isBlank() || (name.length() > MAX_NAME_LENGTH || name.length() < MIN_NAME_LENGTH))) {
+        if (StringUtils.isBlank(name) || name.length() > MAX_NAME_LENGTH || name.length() < MIN_NAME_LENGTH) {
             final String message = "Name cannot be blank or null and must be in range 3-32 characters";
             return new FieldError("String", "name", name, false, null, null, message);
         } else {
@@ -53,7 +51,7 @@ public class LanguageValidator {
     }
 
     private FieldError checkLangCode(final String langCode) {
-        if (nonNull(langCode) && (langCode.isBlank() || langCode.length() != LANG_CODE_LENGTH)) {
+        if (StringUtils.isBlank(langCode) || langCode.length() != LANG_CODE_LENGTH) {
             final String message = "Lang code cannot be blank or null and must have 3 characters";
             return new FieldError("String", "langCode", langCode, false, null, null, message);
         } else {
