@@ -4,6 +4,7 @@ import com.example.flashcards.dto.UserDto;
 import com.example.flashcards.dto.UserPasswordDto;
 import com.example.flashcards.exception.InvalidArgumentException;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.passay.*;
 import org.springframework.security.crypto.bcrypt.BCrypt;
 import org.springframework.stereotype.Component;
@@ -14,8 +15,6 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static java.util.Objects.nonNull;
-
 @Component
 @RequiredArgsConstructor
 public class UserValidator {
@@ -23,7 +22,7 @@ public class UserValidator {
     private static final int MIN_USERNAME_LENGTH = 3;
     private static final int MAX_USERNAME_LENGTH = 32;
     private static final String EMAIL_PATTERN =
-            "^[_A-Za-z0-9- +]+(\\.[_A-Za-z0-9-]+)*@" + "[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$";
+            "^[_A-Za-z0-9- +]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$";
     private static final String USERNAME_PATTERN = "^[a-zA-Z0-9]+([_ -]?[a-zA-Z0-9])*$";
 
 
@@ -63,8 +62,8 @@ public class UserValidator {
     }
 
     private FieldError checkUsername(final String username) {
-        if (nonNull(username) && (username.isBlank() || (username.length() > MAX_USERNAME_LENGTH || username.length() < MIN_USERNAME_LENGTH))
-                && !(Pattern.compile(USERNAME_PATTERN).matcher(username).matches())) {
+        if (StringUtils.isBlank(username) || username.length() > MAX_USERNAME_LENGTH || username.length() < MIN_USERNAME_LENGTH
+                || !(Pattern.compile(USERNAME_PATTERN).matcher(username).matches())) {
             final String message = "Name cannot be blank or null and must be in range 3-32 characters";
             return new FieldError("String", "username", username, false, null, null, message);
         } else {
@@ -73,8 +72,8 @@ public class UserValidator {
     }
 
     private FieldError checkEmail(final String email) {
-        if (nonNull(email) && email.isBlank() && !(Pattern.compile(EMAIL_PATTERN).matcher(email).matches())) {
-            final String message = "Name cannot be blank or null and must be in range 3-32 characters";
+        if (StringUtils.isBlank(email) || !(Pattern.compile(EMAIL_PATTERN).matcher(email).matches())) {
+            final String message = "Email cannot be blank or null and must be in range 3-32 characters";
             return new FieldError("String", "email", email, false, null, null, message);
         } else {
             return null;
@@ -91,7 +90,7 @@ public class UserValidator {
                 new IllegalSequenceRule(EnglishSequenceData.USQwerty, 3, false),
                 new WhitespaceRule()));
 
-        if (nonNull(password) && password.isBlank() && !(passwordValidator.validate(new PasswordData(password)).isValid())) {
+        if (StringUtils.isBlank(password) || !(passwordValidator.validate(new PasswordData(password)).isValid())) {
             final String message = "Password cannot be: blank or null and contains: 8-30 characters, 1 Upper case, 1 digit, 1 special character";
             return new FieldError("String", "password", password, false, null, null, message);
         } else {
@@ -100,9 +99,7 @@ public class UserValidator {
     }
 
     private FieldError checkPasswordAndRepeatPassword(final String password, final String repeatPassword) {
-
-        if (nonNull(password) && password.isBlank() && nonNull(repeatPassword) && repeatPassword.isBlank()
-                && !(password.equals(repeatPassword))) {
+        if (StringUtils.isBlank(password) || StringUtils.isBlank(repeatPassword) || !(password.equals(repeatPassword))) {
             final String message = "Passwords must be equals";
             return new FieldError("String", "repeatPassword", repeatPassword, false, null, null, message);
         } else {
@@ -120,8 +117,7 @@ public class UserValidator {
     }
 
     private FieldError checkOldAndNewPasswordsEquals(final String password, final String newPassword) {
-        if (nonNull(password) && password.isBlank() && nonNull(newPassword) && newPassword.isBlank()
-                && (password.equals(newPassword))) {
+        if (StringUtils.isBlank(password) || StringUtils.isBlank(newPassword) || (password.equals(newPassword))) {
             final String message = "Passwords cannot be equals";
             return new FieldError("String", "password", password, false, null, null, message);
         } else {
